refactor: clean up comments and improve code readability across multiple files (#6)